--- a/css/custom90.css
+++ b/css/custom90.css
@@ -292,7 +292,7 @@ color: #fff;
   /* 5 */
   background: #000;
   border-radius: 15px;
-  color: #ffffff;
+  color: #fff;
   font-size: 12px;
 }
 
@@ -318,12 +318,21 @@ color: #fff;
 }
 
 .uk-lightbox-iframe {
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
+  border: 0px solid black;
+  border-radius: 0; /* Default: no rounding for Chrome, Brave, etc. */
+}
+
+/* Safari-only override */
+@supports (-webkit-hyphens: none) and (not (-moz-appearance: none)) {
+  .uk-lightbox-iframe {
+    border-radius: 25px;
+  }
 }
 
 .uk-lightbox-toolbar {
-  padding: 10px 10px;
+  padding: 5px 5px;
   background: transparent;
   color: rgba(255, 255, 255, 0.7);
 }
@@ -335,14 +344,15 @@ color: #fff;
   box-sizing: border-box;
   width: 50px;
   height: 50px;
-  background: rgba(0, 0, 0, 0.3);
-  color: rgba(255, 255, 255, 0.7);
+  background: #AD9A00;
+  color: white;
   border-radius: 100%;
   /* 1 */
   display: inline-flex;
   justify-content: center;
   align-items: center;
 }
+
 
 /* ========================================================================
    Slider
